Added photo section

--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
             <h4 id="sub-title">Scritto da <a class="author-link" href="#">The Booleaner</a><br>il 10/10/2020</h4>
         </div>
 
+        <!--    Photo section   -->
+        <section id="photo-section">
+            <div class="photos">
+                <div class="photo">
+                    <img src="img/tim-1.jpg" alt="John S. photo, by Scott Henrichsen">
+                </div>
+
+                <div class="photo">
+                    <img src="img/tim-2.jpg" alt="Wikimedia, by Paul Clarke">
+                </div>
+            </div>
+
+            <div class="photo-description">
+                <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+            </div>
+        </section>
+
 
     </main>
 </body>
