--- a/index.html
+++ b/index.html
@@ -42,6 +42,48 @@
             </div>
         </section>
 
+        <!--    Text content    -->
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consequatur consequuntur, distinctio eius esse ex fugiat illum maiores minima molestiae necessitatibus nisi numquam possimus quis, quo similique voluptatibus? Consectetur est magnam natus odio ratione saepe suscipit tempora vitae voluptatem voluptatibus! Ad consectetur dolores eos omnis possimus repellendus temporibus tenetur voluptates.
+            </p>
+        </section>
+
+        <!--    Ul list    -->
+        <section>
+            <ul>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestiae nobis officia?</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestiae nobis officia?</li>
+                <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi molestiae nobis officia?</li>
+            </ul>
+        </section>
+
+        <!--    Table    -->
+        <section>
+            <table cellspacing="0" cellpadding="0">
+                <tr class="table-header">
+                    <th class="column1">Lorem ipsum dolor.</th>
+                    <th class="column2">Lorem ipsum dolor.</th>
+                    <th class="column3">Lorem ipsum dolor.</th>
+                </tr>
+                <tr class="row-color1">
+                    <td class="column1">Lorem ipsum dolor.</td>
+                    <td class="column2">Lorem ipsum dolor.</td>
+                    <td class="column3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet aspernatur explicabo mollitia natus nemo nisi repellat voluptas. Ipsa, natus?</td>
+                </tr>
+                <tr class="row-color2">
+                    <td class="column1">Lorem ipsum dolor.</td>
+                    <td class="column2">Lorem ipsum dolor.</td>
+                    <td class="column3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet aspernatur explicabo mollitia natus nemo nisi repellat voluptas. Ipsa, natus?</td>
+                </tr>
+                <tr class="row-color1">
+                    <td class="column1">Lorem ipsum dolor.</td>
+                    <td class="column2">Lorem ipsum dolor.</td>
+                    <td class="column3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet aspernatur explicabo mollitia natus nemo nisi repellat voluptas. Ipsa, natus?</td>
+                </tr>
+            </table>
+        </section>
+
 
     </main>
 </body>
