table text align fix, photo description style change, added final sections

--- a/index.html
+++ b/index.html
@@ -84,6 +84,26 @@
             </table>
         </section>
 
+        <!--    Below table text     -->
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. A, ab at, aut fugiat incidunt laboriosam maxime praesentium quasi repellat sapiente unde velit voluptates. Doloremque, eius, eveniet fuga, incidunt ipsum magni modi nemo non placeat quae quos ratione sapiente temporibus. Ab aut consectetur deleniti dolore doloremque explicabo numquam quis, sed? Impedit.
+            </p>
+        </section>
+
+        <!--    Suggestions   -->
+        <section id="suggestions-section">
+            <h3>Potrebbero interessarti</h3>
+            <div class="suggestion">
+                <img src="img/monitor.jpg" alt="monitor">
+                <div class="suggestion-title">Lorem ipsum dolor</div>
+            </div>
+
+            <div class="suggestion">
+                <img src="img/graph.jpg" alt="graph">
+                <div class="suggestion-title">Lorem ipsum dolor</div>
+            </div>
+        </section>
 
     </main>
 </body>
