--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--    HEADER  -->
     <header>
         <div class="logo">
-            <img src="img/logo.svg" alt="Logo">
+            <a href="index.html"><img src="img/logo.svg" alt="Logo"></a>
         </div>
     </header>
 
